--- a/tags.yml
+++ b/tags.yml
@@ -12,11 +12,11 @@
        apt: 
          name: git
          state: present
-       tags: mygit  
+       tags: mytree 
 
      - name: i want to install apache2 software
        apt: 
          name: apache2
          state: present
-       tags: mygit  
+       tags: apache  
 
